--- a/bootstrap-2.3.2.css
+++ b/bootstrap-2.3.2.css
@@ -4864,10 +4864,8 @@ input[type="submit"].btn.btn-mini {
   width: 560px;
   margin-left: -280px;
   background-color: white;
-  border: 1px solid #999;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  *border: 1px solid #999;
-  /* IE6-7 */
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  *border: 1px solid #999999;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
@@ -4891,22 +4889,23 @@ input[type="submit"].btn.btn-mini {
 }
 
 .modal-header {
-  padding: 9px 15px;
-  border-bottom: 1px solid #eee;
+  padding: 15px;
+  border-bottom: 1px solid #e5e5e5;
 }
 .modal-header .close {
-  margin-top: 2px;
+  margin-top: -2px;
 }
-.modal-header h3 {
+
+.modal-title, .modal-header h3 {
   margin: 0;
-  line-height: 30px;
+  line-height: 20px;
 }
 
 .modal-body {
   position: relative;
   overflow-y: auto;
   max-height: 400px;
-  padding: 15px;
+  padding: 20px;
 }
 
 .modal-form {
@@ -4914,11 +4913,11 @@ input[type="submit"].btn.btn-mini {
 }
 
 .modal-footer {
-  padding: 14px 15px 15px;
+  padding: 19px 20px 20px;
   margin-bottom: 0;
   text-align: right;
   background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #e5e5e5;
   -webkit-border-radius: 0 0 6px 6px;
   -moz-border-radius: 0 0 6px 6px;
   border-radius: 0 0 6px 6px;
