--- a/lib/_modals.scss
+++ b/lib/_modals.scss
@@ -10,7 +10,7 @@
   bottom: 0;
   left: 0;
   z-index: $zindex-modal-background;
-  background-color: $black;
+  background-color: $modal-backdrop-bg;
   // Fade for backdrop
   &.fade { opacity: 0; }
 }
@@ -28,10 +28,10 @@
   z-index: $zindex-modal;
   width: 560px;
   margin-left: -280px;
-  background-color: $white;
-  border: 1px solid #999;
-  border: 1px solid rgba(0,0,0,.3);
-  *border: 1px solid #999; /* IE6-7 */
+  background-color: $modal-content-bg;
+  border: 1px solid $modal-content-border-color;
+  *border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
+
   @include border-radius(6px);
   @include box-shadow(0 3px 7px rgba(0,0,0,0.3));
   @include background-clip(padding-box);
@@ -44,16 +44,20 @@
   }
   &.fade.in { top: 10%; }
 }
+
+// Modal header
+// Top section of the modal w/ title and dismiss
 .modal-header {
-  padding: 9px 15px;
-  border-bottom: 1px solid #eee;
+  padding: $modal-title-padding;
+  border-bottom: 1px solid $modal-header-border-color;
   // Close icon
-  .close { margin-top: 2px; }
-  // Heading
-  h3 {
-    margin: 0;
-    line-height: 30px;
-  }
+  .close { margin-top: -2px; }
+}
+
+// Title text within header
+.modal-title, .modal-header h3 {
+  margin: 0;
+  line-height: $modal-title-line-height;
 }
 
 // Body (where all modal content resides)
@@ -61,8 +65,9 @@
   position: relative;
   overflow-y: auto;
   max-height: 400px;
-  padding: 15px;
+  padding: $modal-inner-padding;
 }
+
 // Remove bottom margin if need be
 .modal-form {
   margin-bottom: 0;
@@ -70,11 +75,11 @@
 
 // Footer (for actions)
 .modal-footer {
-  padding: 14px 15px 15px;
+  padding: ($modal-inner-padding - 1) $modal-inner-padding $modal-inner-padding;
   margin-bottom: 0;
   text-align: right; // right align buttons
   background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid $modal-footer-border-color;
   @include border-radius(0 0 6px 6px);
   @include box-shadow(inset 0 1px 0 $white);
   @include clearfix(); // clear it in case folks use .pull-* classes on buttons
