flat buttons, use border-radius vars

--- a/lib/_button-groups.scss
+++ b/lib/_button-groups.scss
@@ -135,25 +135,25 @@
 
   // Keep the hover's background when dropdown is open
   .btn.dropdown-toggle {
-    background-color: $btn-default-highlight-bg;
+    background-color: $btn-default-bg;
   }
   .btn-primary.dropdown-toggle {
-    background-color: $btn-primary-highlight-bg;
+    background-color: $btn-primary-bg;
   }
   .btn-warning.dropdown-toggle {
-    background-color: $btn-warning-highlight-bg;
+    background-color: $btn-warning-bg;
   }
   .btn-danger.dropdown-toggle {
-    background-color: $btn-danger-highlight-bg;
+    background-color: $btn-danger-bg;
   }
   .btn-success.dropdown-toggle {
-    background-color: $btn-success-highlight-bg;
+    background-color: $btn-success-bg;
   }
   .btn-info.dropdown-toggle {
-    background-color: $btn-info-highlight-bg;
+    background-color: $btn-info-bg;
   }
   .btn-inverse.dropdown-toggle {
-    background-color: $btn-inverse-highlight-bg;
+    background-color: $btn-inverse-bg;
   }
 }
 
