--- a/lib/_dropdowns.scss
+++ b/lib/_dropdowns.scss
@@ -47,14 +47,14 @@
   float: left;
   min-width: 160px;
   padding: 5px 0;
-  margin: 2px 0 0; // override default ul
+  margin: 0; // override default ul
   list-style: none;
   background-color: $dropdown-bg;
   border: 1px solid #ccc; // Fallback for IE7-8
   border: 1px solid $dropdown-border;
   *border-right-width: 2px;
   *border-bottom-width: 2px;
-  @include border-radius(6px);
+  @include border-radius($border-radius-large);
   @include box-shadow(0 5px 10px rgba(0,0,0,.2));
   -webkit-background-clip: padding-box;
      -moz-background-clip: padding;
@@ -184,7 +184,7 @@
   left: 100%;
   margin-top: -6px;
   margin-left: -1px;
-  @include border-radius(0 6px 6px 6px);
+  @include border-radius(0 $border-radius-large $border-radius-large $border-radius-large);
 }
 .dropdown-submenu:hover > .dropdown-menu {
   display: block;
@@ -196,7 +196,7 @@
   bottom: 0;
   margin-top: 0;
   margin-bottom: -2px;
-  @include border-radius(5px 5px 5px 0);
+  @include border-radius($border-radius-large $border-radius-large $border-radius-large 0);
 }
 
 // Caret to indicate there is a submenu
@@ -227,7 +227,7 @@
   > .dropdown-menu {
     left: -100%;
     margin-left: 10px;
-    @include border-radius(6px 0 6px 6px);
+    @include border-radius($border-radius-large 0 $border-radius-large $border-radius-large);
   }
 }
 
