--- a/lib/_navbar.scss
+++ b/lib/_navbar.scss
@@ -277,8 +277,7 @@
   padding: 7px 10px;
   margin-left: 5px;
   margin-right: 5px;
-  @include buttonBackground(darken($navbar-bg-highlight, 5%), darken($navbar-bg, 5%));
-  @include box-shadow(inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.075));
+  @include buttonBackground(darken($navbar-bg-highlight, 5%));
 }
 .navbar .btn-navbar .icon-bar {
   display: block;
