--- a/lib/_navs.scss
+++ b/lib/_navs.scss
@@ -123,7 +123,7 @@
   padding-bottom: 8px;
   line-height: $line-height-base;
   border: 1px solid transparent;
-  @include border-radius(4px 4px 0 0);
+  @include border-radius($border-radius-base $border-radius-base 0 0);
   &:hover,
   &:focus {
     border-color: $gray-lighter $gray-lighter #ddd;
@@ -150,7 +150,7 @@
   padding-bottom: 8px;
   margin-top: 2px;
   margin-bottom: 2px;
-  @include border-radius(5px);
+  @include border-radius($border-radius-large);
 }
 
 // Active state
@@ -183,10 +183,10 @@
   @include border-radius(0);
 }
 .nav-tabs.nav-stacked > li:first-child > a {
-  @include border-top-radius(4px);
+  @include border-top-radius($border-radius-base);
 }
 .nav-tabs.nav-stacked > li:last-child > a {
-  @include border-bottom-radius(4px);
+  @include border-bottom-radius($border-radius-base);
 }
 .nav-tabs.nav-stacked > li > a:hover,
 .nav-tabs.nav-stacked > li > a:focus {
@@ -208,10 +208,10 @@
 // ---------
 
 .nav-tabs .dropdown-menu {
-  @include border-radius(0 0 6px 6px); // remove the top rounded corners here since there is a hard edge above the menu
+  @include border-radius(0 0 $border-radius-large $border-radius-large); // remove the top rounded corners here since there is a hard edge above the menu
 }
 .nav-pills .dropdown-menu {
-  @include border-radius(6px); // make rounded corners match the pills
+  @include border-radius($border-radius-large); // make rounded corners match the pills
 }
 
 // Default dropdown links
@@ -321,7 +321,7 @@
   margin-bottom: 0;
 }
 .tabs-below > .nav-tabs > li > a {
-  @include border-radius(0 0 4px 4px);
+  @include border-radius(0 0 $border-radius-base $border-radius-base);
   &:hover,
   &:focus {
     border-bottom-color: transparent;
@@ -357,7 +357,7 @@
 }
 .tabs-left > .nav-tabs > li > a {
   margin-right: -1px;
-  @include border-radius(4px 0 0 4px);
+  @include border-radius($border-radius-base 0 0 $border-radius-base);
 }
 .tabs-left > .nav-tabs > li > a:hover,
 .tabs-left > .nav-tabs > li > a:focus {
@@ -378,7 +378,7 @@
 }
 .tabs-right > .nav-tabs > li > a {
   margin-left: -1px;
-  @include border-radius(0 4px 4px 0);
+  @include border-radius(0 $border-radius-base $border-radius-base 0);
 }
 .tabs-right > .nav-tabs > li > a:hover,
 .tabs-right > .nav-tabs > li > a:focus {
