--- a/lib/_type.scss
+++ b/lib/_type.scss
@@ -74,12 +74,12 @@ h1,
 h2,
 h3 { line-height: $line-height-base * 2; }
 
-h1 { font-size: $font-size-base * 2.75; } // ~38px
-h2 { font-size: $font-size-base * 2.25; } // ~32px
-h3 { font-size: $font-size-base * 1.75; } // ~24px
-h4 { font-size: $font-size-base * 1.25; } // ~18px
-h5 { font-size: $font-size-base; }
-h6 { font-size: $font-size-base * 0.85; } // ~12px
+h1 { font-size: $font-size-h1; }
+h2 { font-size: $font-size-h2; }
+h3 { font-size: $font-size-h3; }
+h4 { font-size: $font-size-h4; }
+h5 { font-size: $font-size-h5; }
+h6 { font-size: $font-size-h6; }
 
 h1 small { font-size: $font-size-base * 1.75; } // ~24px
 h2 small { font-size: $font-size-base * 1.25; } // ~18px
