--- a/lib/_variables.scss
+++ b/lib/_variables.scss
@@ -41,14 +41,23 @@ $link-color-hover:      darken($link-color, 15%) !default;
 
 // Typography
 // -------------------------
-$font-family-sans-serif:    "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-family-serif:         Georgia, "Times New Roman", Times, serif !default;
-$font-family-monospace:     Monaco, Menlo, Consolas, "Courier New", monospace !default;
+$font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
+$font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace !default;
+$font-family-base:        $font-family-sans-serif !default;
 
-$font-size-base:            14px !default;
-$font-family-base:          $font-family-sans-serif !default;
+$font-size-base:          14px !default;
+$font-size-large:         ceil($font-size-base * 1.25) !default; // ~18px
+$font-size-small:         ceil($font-size-base * 0.85) !default; // ~12px
+
+$font-size-h1:            floor($font-size-base * 2.6) !default; // ~36px
+$font-size-h2:            floor($font-size-base * 2.15) !default; // ~30px
+$font-size-h3:            ceil($font-size-base * 1.7) !default; // ~24px
+$font-size-h4:            ceil($font-size-base * 1.25) !default; // ~18px
+$font-size-h5:            $font-size-base !default;
+$font-size-h6:            ceil($font-size-base * 0.85) !default; // ~12px
+
 $line-height-base:          20px !default;
-$font-family-alt:           $font-family-serif !default;
 
 $headings-font-family:      inherit !default; // empty to use BS default, $font-family-base
 $headings-font-weight:      bold !default;    // instead of browser default, bold
