add variable for modal opacity and add modal-open class to body when modal opens

--- a/lib/_variables.scss
+++ b/lib/_variables.scss
@@ -330,5 +330,7 @@ $modal-content-border-color:                   rgba(0,0,0,.2) !default;
 $modal-content-fallback-border-color:          #999 !default;
 
 $modal-backdrop-bg:           #000 !default;
+$modal-backdrop-opacity:      80 !default;
+
 $modal-header-border-color:   #e5e5e5 !default;
 $modal-footer-border-color:   $modal-header-border-color !default;
