--- a/lib/_modals.scss
+++ b/lib/_modals.scss
@@ -17,7 +17,7 @@
 
 .modal-backdrop,
 .modal-backdrop.fade.in {
-  @include opacity(80);
+  @include opacity($modal-backdrop-opacity);
 }
 
 // Base modal
@@ -31,8 +31,9 @@
   background-color: $modal-content-bg;
   border: 1px solid $modal-content-border-color;
   *border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
-
-  @include border-radius(6px);
+  @if $border-radius-large > 0px {
+    @include border-radius($border-radius-large);
+  }
   @include box-shadow(0 3px 7px rgba(0,0,0,0.3));
   @include background-clip(padding-box);
   // Remove focus outline from opened modal
@@ -80,7 +81,9 @@
   text-align: right; // right align buttons
   background-color: #f5f5f5;
   border-top: 1px solid $modal-footer-border-color;
-  @include border-radius(0 0 6px 6px);
+  @if $border-radius-large > 0px {
+    @include border-radius(0 0 $border-radius-large $border-radius-large);
+  }
   @include box-shadow(inset 0 1px 0 $white);
   @include clearfix(); // clear it in case folks use .pull-* classes on buttons
 
