--- a/lib/bootstrap.scss
+++ b/lib/bootstrap.scss
@@ -51,6 +51,7 @@
 @import "popovers";
 
 // Components: Misc
+@import "switches";
 @import "thumbnails";
 @import "media";
 @import "labels-badges";
