--- a/bootstrap-2.3.2.css
+++ b/bootstrap-2.3.2.css
@@ -5044,6 +5044,120 @@ input[type="submit"].btn.btn-mini {
   bottom: -10px;
 }
 
+label.switch {
+  display: inline-block;
+  *display: inline;
+  /* IE7 inline-block hack */
+  *zoom: 1;
+}
+label.switch input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+label.switch input[type="checkbox"].ios:focus {
+  outline: none;
+}
+
+/* track */
+input[type="checkbox"].ios + .track {
+  vertical-align: middle;
+  width: 40px;
+  height: 20px;
+  border: 1px solid #686868;
+  border-radius: 999px;
+  background-color: #bbb;
+  box-shadow: inset 0 0 0 0px rgba(0, 0, 0, 0.4);
+  -webkit-transition-duration: .4s;
+  -webkit-transition-property: background-color, box-shadow;
+}
+
+input[type="checkbox"].ios:checked + .track {
+  background-position: 0 0;
+  background-color: #3b89ec;
+  border: 1px solid #0e62cd;
+  box-shadow: inset 0 0 0 25px #3b89ff;
+}
+
+input[type="checkbox"].ios.checked + .track {
+  background-position: 0 0;
+  background-color: #3b89ec;
+  border: 1px solid #0e62cd;
+  box-shadow: inset 0 0 0 25px #3b89ff;
+}
+
+/* knob */
+input[type="checkbox"].ios + .track > .knob {
+  float: left;
+  width: 18px;
+  height: 18px;
+  border-radius: inherit;
+  background: #ffffff;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0px 1px rgba(0, 0, 0, 0.4);
+  pointer-events: none;
+  margin-top: 1px;
+  margin-left: 1px;
+  -webkit-transition-timing-function: cubic-bezier(0.54, 1.85, 0.5, 1);
+  -webkit-transition-duration: 0.4s;
+  -webkit-transition-property: transform, background-color, box-shadow;
+  -moz-transition-timing-function: cubic-bezier(0.54, 1.85, 0.5, 1);
+  -moz-transition-duration: 0.4s;
+  -moz-transition-property: transform, background-color;
+}
+
+input[type="checkbox"].ios:checked + .track > .knob {
+  float: right;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px #0850ac;
+}
+
+input[type="checkbox"].ios.checked + .track > .knob {
+  float: right;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px #0850ac;
+}
+
+.csstransforms input[type="checkbox"].ios:checked + .track > .knob {
+  float: left;
+  -webkit-transform: translate3d(20px, 0, 0);
+  -moz-transform: translate3d(20px, 0, 0);
+  transform: translate3d(20px, 0, 0);
+}
+
+input[type="checkbox"].large.ios + .track {
+  width: 50px;
+  height: 25px;
+}
+
+input[type="checkbox"].large.ios + .track > .knob {
+  width: 23px;
+  height: 23px;
+  margin-top: 1px;
+}
+
+.csstransforms input[type="checkbox"].large.ios:checked + .track > .knob {
+  -webkit-transform: translate3d(25px, 0, 0);
+  -moz-transform: translate3d(25px, 0, 0);
+  transform: translate3d(25px, 0, 0);
+}
+
+input[type="checkbox"].small.ios + .track {
+  width: 34px;
+  height: 17px;
+}
+
+input[type="checkbox"].small.ios + .track > .knob {
+  width: 15px;
+  height: 15px;
+  margin-top: 1px;
+}
+
+.csstransforms input[type="checkbox"].small.ios:checked + .track > .knob {
+  -webkit-transform: translate3d(17px, 0, 0);
+  -moz-transform: translate3d(17px, 0, 0);
+  transform: translate3d(17px, 0, 0);
+}
+
 .thumbnails {
   margin-left: -20px;
   list-style: none;
