--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -695,3 +695,19 @@
 @mixin grid-input-span($columns, $grid-column-width, $grid-gutter-width) {
   width: (($grid-column-width) * $columns) + ($grid-gutter-width * ($columns - 1)) - 14;
 }
+
+
+// Switches
+// -------------------------
+@mixin ios-checked-track($bg, $height) {
+  background-position: 0 0;
+  background-color: $bg;
+  border: 1px solid #0e62cd;
+  box-shadow: inset 0 0 0 $height #3b89ff;
+}
+
+@mixin ios-checked-knob() {
+  float: right;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px rgba(8, 80, 172,1);
+}
