add disabled, implment api for managing their state

--- a/bootstrap-2.3.2.css
+++ b/bootstrap-2.3.2.css
@@ -5058,6 +5058,9 @@ label.switch input[type="checkbox"] {
 label.switch input[type="checkbox"].ios:focus {
   outline: none;
 }
+label.switch input[type="checkbox"][disabled] + .track {
+  cursor: not-allowed;
+}
 
 /* track */
 input[type="checkbox"].ios + .track {
@@ -5070,18 +5073,21 @@ input[type="checkbox"].ios + .track {
   box-shadow: inset 0 0 0 0px rgba(0, 0, 0, 0.4);
   -webkit-transition-duration: .4s;
   -webkit-transition-property: background-color, box-shadow;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 input[type="checkbox"].ios:checked + .track {
   background-position: 0 0;
-  background-color: #3b89ec;
+  background-color: #428bca;
   border: 1px solid #0e62cd;
   box-shadow: inset 0 0 0 25px #3b89ff;
 }
 
 input[type="checkbox"].ios.checked + .track {
   background-position: 0 0;
-  background-color: #3b89ec;
+  background-color: #428bca;
   border: 1px solid #0e62cd;
   box-shadow: inset 0 0 0 25px #3b89ff;
 }
