--- a/lib/_switches.scss
+++ b/lib/_switches.scss
@@ -1,5 +1,3 @@
-$primary: #3b89ec;
-
 label.switch {
     display: inline-block;
     @include ie7-inline-block();
@@ -12,6 +10,10 @@ label.switch {
     input[type="checkbox"].ios:focus {
         outline: none;
     }
+
+    input[type="checkbox"][disabled] + .track {
+        cursor: not-allowed;
+    }
 }
 
 /* track */
@@ -23,23 +25,28 @@ input[type="checkbox"].ios + .track {
     border-radius: 999px;
     background-color: #bbb;
     box-shadow: inset 0 0 0 0px rgba(0,0,0,0.4);
+
     -webkit-transition-duration: .4s;
     -webkit-transition-property: background-color, box-shadow;
+
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
 }
 
 input[type="checkbox"].ios:checked + .track {
-    @include ios-checked-track($primary, $switch-height-large);
+    @include ios-checked-track($brand-primary, $switch-height-large);
 }
 
 // for IE8...it needs separately
 input[type="checkbox"].ios.checked + .track {
-    @include ios-checked-track($primary, $switch-height-large);
+    @include ios-checked-track($brand-primary, $switch-height-large);
 }
 
 /* knob */
 input[type="checkbox"].ios + .track > .knob {
     float: left;
-    width: $switch-height-base - 2; 
+    width: $switch-height-base - 2;
     height: $switch-height-base - 2;
     border-radius: inherit;
     background: #ffffff;
