--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -702,12 +702,12 @@
 @mixin ios-checked-track($bg, $height) {
   background-position: 0 0;
   background-color: $bg;
-  border: 1px solid #0e62cd;
-  box-shadow: inset 0 0 0 $height #3b89ff;
+  border: 1px solid darken($bg, 5%);
+  box-shadow: inset 0 0 0 $height lighten($bg, 1%);
 }
 
 @mixin ios-checked-knob() {
   float: right;
   background-color: #ffffff;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px rgba(8, 80, 172,1);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px #efefef;
 }
