--- a/bootstrap-2.3.2.css
+++ b/bootstrap-2.3.2.css
@@ -5055,7 +5055,7 @@ label.switch input[type="checkbox"] {
   opacity: 0;
   filter: alpha(opacity=0);
 }
-label.switch input[type="checkbox"].ios:focus {
+label.switch input[type="checkbox"]:focus {
   outline: none;
 }
 label.switch input[type="checkbox"][disabled] + .track {
@@ -5123,7 +5123,7 @@ input[type="checkbox"].ios.checked + .track > .knob {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px #efefef;
 }
 
-.csstransforms input[type="checkbox"].ios:checked + .track > .knob {
+.csstransforms3d input[type="checkbox"].ios:checked + .track > .knob {
   float: left;
   -webkit-transform: translate3d(20px, 0, 0);
   -moz-transform: translate3d(20px, 0, 0);
@@ -5138,10 +5138,9 @@ input[type="checkbox"].large.ios + .track {
 input[type="checkbox"].large.ios + .track > .knob {
   width: 23px;
   height: 23px;
-  margin-top: 1px;
 }
 
-.csstransforms input[type="checkbox"].large.ios:checked + .track > .knob {
+.csstransforms3d input[type="checkbox"].large.ios:checked + .track > .knob {
   -webkit-transform: translate3d(25px, 0, 0);
   -moz-transform: translate3d(25px, 0, 0);
   transform: translate3d(25px, 0, 0);
@@ -5155,10 +5154,9 @@ input[type="checkbox"].small.ios + .track {
 input[type="checkbox"].small.ios + .track > .knob {
   width: 15px;
   height: 15px;
-  margin-top: 1px;
 }
 
-.csstransforms input[type="checkbox"].small.ios:checked + .track > .knob {
+.csstransforms3d input[type="checkbox"].small.ios:checked + .track > .knob {
   -webkit-transform: translate3d(17px, 0, 0);
   -moz-transform: translate3d(17px, 0, 0);
   transform: translate3d(17px, 0, 0);
