--- a/bootstrap-2.3.2.css
+++ b/bootstrap-2.3.2.css
@@ -2979,7 +2979,7 @@ table th[class*="span"],
 .close {
   float: right;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: lighter;
   line-height: 20px;
   color: black;
   text-shadow: 0 1px 0 white;
