--- a/docs/templates/pages/javascript.mustache
+++ b/docs/templates/pages/javascript.mustache
@@ -24,6 +24,7 @@
           <li><a href="#popovers"><i class="icon-chevron-right"></i> {{_i}}Popover{{/i}}</a></li>
           <li><a href="#alerts"><i class="icon-chevron-right"></i> {{_i}}Alert{{/i}}</a></li>
           <li><a href="#buttons"><i class="icon-chevron-right"></i> {{_i}}Button{{/i}}</a></li>
+          <li><a href="#switches"><i class="icon-chevron-right"></i> {{_i}}Switches{{/i}}</a></li>
           <li><a href="#collapse"><i class="icon-chevron-right"></i> {{_i}}Collapse{{/i}}</a></li>
           <li><a href="#carousel"><i class="icon-chevron-right"></i> {{_i}}Carousel{{/i}}</a></li>
           <li><a href="#typeahead"><i class="icon-chevron-right"></i> {{_i}}Typeahead{{/i}}</a></li>
@@ -1169,6 +1170,70 @@ $('#my-alert').bind('closed', function () {
   $('.btn').button('complete')
 &lt;/script&gt;
 </pre>
+          </section>
+
+
+          <!-- Switches
+          ================================================== -->
+          <section id="switches">
+            <div class="page-header">
+              <h1>Switches <small>bootstrap-switch.js</small></h1>
+            </div>
+
+            <h2>Example uses</h2>
+            
+            <h4>Base</h4>
+            <div class="bs-docs-example" style="padding-bottom: 24px;">
+              <input type="checkbox" class="ios" checked />
+            </div>
+            <pre class="prettyprint linenums">&lt;input type="checkbox" class="ios" checked /&gt;</pre>
+
+            <h4>Small</h4>
+            <div class="bs-docs-example" style="padding-bottom: 24px;">
+              <input type="checkbox" class="ios small" checked />
+            </div>
+            <pre class="prettyprint linenums">&lt;input type="checkbox small" class="ios" checked /&gt;</pre>
+
+            <h4>Large</h4>
+            <div class="bs-docs-example" style="padding-bottom: 24px;">
+              <input type="checkbox" class="ios large" checked />
+            </div>
+            <pre class="prettyprint linenums">&lt;input type="checkbox large" class="ios" checked /&gt;</pre>
+
+            <h4>Color variants</h4>
+            <div class="bs-docs-example" style="padding-bottom: 24px;">
+              <input type="checkbox" class="ios brand-success" checked />
+              <input type="checkbox" class="ios brand-warning" checked />
+              <input type="checkbox" class="ios brand-danger" checked />
+              <input type="checkbox" class="ios brand-info" checked />
+            </div>
+            <pre class="prettyprint linenums">
+&lt;input type="checkbox brand-success" class="ios" checked /&gt;
+&lt;input type="checkbox brand-warning" class="ios" checked /&gt;
+&lt;input type="checkbox brand-danger" class="ios" checked /&gt;
+&lt;input type="checkbox brand-info" class="ios" checked /&gt;
+</pre>
+            <hr class="bs-docs-separator">
+
+
+            <h2>Usage</h2>
+            <p>Enable switches via JavaScript:</p>
+            <pre class="prettyprint linenums">$('input[type="checkbox"]').svitch()</pre>
+
+            <h3>Options</h3>
+            <p><em>None</em></p>
+
+            <h3>Methods</h3>
+            <h4>.svitch('enable')</h4>
+            <p>Enables switch.</p>
+            <h4>.svitch('disable')</h4>
+            <p>Disables switch.</p>
+            <h4>.svitch('on')</h4>
+            <p>Turn on switch.</p>
+            <h4>.svitch('off')</h4>
+            <p>Turn on switch.</p>
+            <h4>.svitch('toggle')</h4>
+            <p>Toggle switch on and off.</p>
           </section>
 
 
