--- a/lib/_variables.scss
+++ b/lib/_variables.scss
@@ -20,11 +20,11 @@ $white:                 #fff !default;
 
 // Brand colors
 // -------------------------
-$brand-primary:         #428bca;
-$brand-success:         #5cb85c;
-$brand-warning:         #f0ad4e;
-$brand-danger:          #d9534f;
-$brand-info:            #5bc0de;
+$brand-primary:         #428bca !default;
+$brand-success:         #5cb85c !default;
+$brand-warning:         #f0ad4e !default;
+$brand-danger:          #d9534f !default;
+$brand-info:            #5bc0de !default;
 
 
 // Scaffolding
